fix content jumping on search bar vanishing or appearing

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@
   --color-badge-no-trans-bg: #3a2020;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   background: var(--color-bg);
